# musicmind

./: .dockerignore  .env.example  .gitignore  ABOUT.md  AGENTS.md  CHECKPOINT_11_VERIFICATION.md  CHECKPOINT_5_VERIFICATION.md  Dockerfile  README.md  TASK_13_SUMMARY.md  TASK_2_SUMMARY.md  TASK_3_SUMMARY.md  TASK_4_SUMMARY.md  TASK_6_SUMMARY.md  TASK_7_SUMMARY.md  TASK_8_SUMMARY.md  deploy.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  truefoundry.yaml
config/: __init__.py  aerospike.conf  settings.py
docs/: API.md  API_CREDENTIALS.md  ARCHITECTURE.md  README.md  SPOTIFY_AGENT.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
scripts/: demo_graph_connections.py  demo_self_improvement.py  test_lastfm_agent.py  test_multi_agent_integration.py  test_musicbrainz_agent.py  test_scraper_agent.py  test_spotify_agent.py  verify_feedback_processor.py  verify_quality_tracking.py  verify_self_improvement_cycle.py  verify_setup.py
src/: __init__.py
src/api/: README.md  (+7 more)
tests/: __init__.py  test_api.py  test_checkpoint_15.py  test_checkpoint_5.py  test_data_validation.py  test_error_handling.py  test_feedback_integration.py  test_feedback_processor.py  test_integration.py  test_lastfm_agent.py  test_lastfm_integration.py  test_metrics.py  test_models.py  test_musicbrainz_agent.py  test_musicbrainz_integration.py  test_orchestrator.py  test_overmind_client.py  test_quality_tracker.py  test_quality_tracking_integration.py  test_redis_client.py  test_scraper_agent.py  test_self_improvement_integration.py  test_spotify_agent.py  (+1 more)
(+46 files in other folders)
